--- a/public/2026RegulationsStyleSheet.css
+++ b/public/2026RegulationsStyleSheet.css
@@ -1,9 +1,7 @@
 
-.car {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+
+div{
+    text-align: center;
 }
 
 p{
